implement Lint recommendations